--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--7">Turks and Caicos post Cabinet Update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-30th-session-statement-by-the-united-kingdom-of-great-britain-and-northern-ireland--3">Human Rights Council, 30th Session: Statement by the United Kingdom of Great Britain and Northern Ireland</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-runs-second-successful-course-about-understanding-nato--2">UK delegation runs second successful course about understanding NATO</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/international-human-rights-day--3">International Human Rights Day</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/253585.pt">Agenda britânica para atrair empresários brasileiros continua</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-the-uk-visa-application-process--2">Changes to the UK visa application process in Romania</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/207016.pt">Rede Britânica de Ciência e Inovação traz palestra do carro mais veloz do mundo a estudantes e professores do SENAI-SP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/283719.es-419">Fiscal de la Nación recibió al Crown Prosecution Service</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/172849.pt">UKTI busca brasileiros para participar de festival</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
