--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -371,16 +371,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.liverpool.gov.uk">Liverpool City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.harlow.gov.uk">Harlow District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chiltern.gov.uk">Chiltern District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.staffsmoorlands.gov.uk">Staffordshire Moorlands District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.glasgow.gov.uk">Glasgow City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
+<li><a href="https://www.gov.ukhttp//www.centralbedfordshire.gov.uk/">Central Bedfordshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/county">Dorset County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.uttlesford.gov.uk">Uttlesford District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.nottinghamshire.gov.uk">Nottinghamshire County Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
