--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,15 +404,15 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
-      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
-      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
+      <li><a href="http://www.tamworth.gov.uk" class="govuk-link">Tamworth Borough Council</a></li>
       <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/county" class="govuk-link">Dorset County Council</a></li>
-      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
+      <li><a href="http://www.harlow.gov.uk" class="govuk-link">Harlow District Council</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
+      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
       <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
