--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,16 +404,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
-      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
-      <li><a href="http://www.dundeecity.gov.uk" class="govuk-link">Dundee City Council</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
-      <li><a href="http://www.hastings.gov.uk" class="govuk-link">Hastings Borough Council</a></li>
-      <li><a href="http://www.tamworth.gov.uk" class="govuk-link">Tamworth Borough Council</a></li>
       <li><a href="http://www.west-dunbarton.gov.uk/" class="govuk-link">West Dunbartonshire Council</a></li>
+      <li><a href="http://www.hastings.gov.uk" class="govuk-link">Hastings Borough Council</a></li>
+      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
+      <li><a href="http://www.cyberaware.gov.uk" class="govuk-link">Cyber Aware</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
+      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
+      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
+      <li><a href="http://www.powys.gov.uk" class="govuk-link">Powys County Council</a></li>
+      <li><a href="http://www.ne-derbyshire.gov.uk" class="govuk-link">North East Derbyshire District Council</a></li>
+      <li><a href="http://www.beanenergyshopper.com/" class="govuk-link">Power to Switch</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
